--- a/tan_express_app/pubspec.yaml
+++ b/tan_express_app/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   flutter_svg: ^2.0.7
+  email_validator: ^2.1.17
+  phone_form_field: ^8.1.0
+  top_snackbar_flutter: ^3.1.0
+  flutter_platform_alert: ^0.5.1
+  dotted_line: ^3.2.2
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +35,4 @@ flutter:
 
   assets:
     - assets/icons/
+    - assets/images/
